UI Updates JQuery Datatable added
UI theme has been reworked and login. Added JQuery Datatable for all roster data tables.

--- a/Views/Admin/Dashboard.cshtml
+++ b/Views/Admin/Dashboard.cshtml
@@ -1,12 +1,11 @@
 ﻿@{
     ViewData["Title"] = "Admin Dashboard";
 }
-<link rel="stylesheet" href="~/css/AdminDashboardStyleSheet.css" />
 <!--First Row-->
 <div class="row d-flex justify-content-center">
     <div class="card-deck">
         <!--Orgs Card-->
-        <div class="card" style="width: 18rem;">
+        <div class="card dashboard-card" style="width: 18rem;">
             <div class="card-body">
                 <h4 class="card-title">Organizations</h4>
                 <p class="card-text" id="orgsCount"></p>
@@ -14,7 +13,7 @@
             </div>
         </div>
         <!--Academic Sessions Card-->
-        <div class="card" style="width: 18rem;">
+        <div class="card dashboard-card" style="width: 18rem;">
             <div class="card-body">
                 <h4 class="card-title">Academic Sessions</h4>
                 <p class="card-text" id="sessionsCount"></p>
@@ -22,7 +21,7 @@
             </div>
         </div>
         <!--Users Card-->
-        <div class="card" style="width: 18rem;">
+        <div class="card dashboard-card" style="width: 18rem;">
             <div class="card-body">
                 <h4 class="card-title">Users</h4>
                 <p class="card-text" id="usersCount"></p>
@@ -34,21 +33,21 @@
 <div class="row d-flex justify-content-center">
     <div class="card-deck">
         <!--Courses Card-->
-        <div class="card" style="width: 18rem;">
+        <div class="card dashboard-card" style="width: 18rem;">
             <div class="card-body">
                 <h4 class="card-title">Courses</h4>
                 <p class="card-text" id="coursesCount"></p>
             </div>
         </div>
         <!--Classes Card-->
-        <div class="card" style="width: 18rem;">
+        <div class="card dashboard-card" style="width: 18rem;">
             <div class="card-body">
                 <h4 class="card-title">Classes</h4>
                 <p class="card-text" id="classesCount"></p>
             </div>
         </div>
         <!--Enrollments Card-->
-        <div class="card" style="width: 18rem;">
+        <div class="card dashboard-card" style="width: 18rem;">
             <div class="card-body">
                 <h4 class="card-title">Enrollments</h4>
                 <p class="card-text" id="enrollmentsCount"></p>
