--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -6,15 +6,11 @@
     Layout = "~/Views/Shared/_LoginLayout.cshtml";
 }
 
-<div class="row d-flex justify-content-center">
+<div class="row h-100 justify-content-center align-items-center">
     <div class="card">
-        <div class="card-header text-center">
-            Franklin County IDGen
-        </div>
-        <div class="card-body text-center">
-            <section>
-                <h4>Local Account Login:</h4>
-                <form id="account" method="post">
+        <img class="card-img-top" src="~/Images/IDGenLogoFullSize.png" alt="ID Gen Logo"/>
+        <div class="card-body">
+           <form id="account" method="post">
                     <div asp-validation-summary="All" class="text-danger"></div>
                     <div class="form-group">
                         <label asp-for="Input.Email"></label>
@@ -35,7 +31,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <button type="submit" class="btn btn-primary">Log in</button>
+                        <button type="submit" class="btn login-btn">Log In</button>
                     </div>
                     <div class="form-group">
                         <p>
@@ -43,10 +39,10 @@
                         </p>
                     </div>
                 </form>
-            </section>
-            <section>
-                <h4>External Login:</h4>
-                @{
+            
+        </div>
+        <div class="card-footer">
+             @{
                     if ((Model.ExternalLogins?.Count ?? 0) == 0)
                     {
                         <div>
@@ -59,31 +55,22 @@
                     else
                     {
                         <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                            <div>
-                                <p>
+                            <div class="external-div">
+                                <p class="ext-p">
                                     @foreach (var provider in Model.ExternalLogins)
                                     {
                                         <!--<button type="submit" class="azurebutton" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account"><img src="~/Images/ms-symbollockup_signin_dark.png" /></button>-->
-                                        <input type="image" src="~/Images/ms-symbollockup_signin_dark.png" name="provider" value="@provider.Name"/>
+                                        <input type="image" class="azure-img" src="~/Images/ms-symbollockup_signin_dark.png" name="provider" value="@provider.Name"/>
                                     }
                                 </p>
                             </div>
                         </form>
                     }
                 }
-            </section>
-        </div>
-        <div class="card-footer text-center">
-            <p>Powered By:</p>
-            <img src="~/Images/eagletree.png" class="eagletree" />
         </div>
     </div>
 </div>
 
 @section Scripts {
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <link rel="stylesheet" href="~/css/login.css" />
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <partial name="_ValidationScriptsPartial" />
 }
