--- a/Views/RosterData/Courses.cshtml
+++ b/Views/RosterData/Courses.cshtml
@@ -1,13 +1,8 @@
-﻿@model IEnumerable<Courses>
+﻿@model Courses
 @{
     ViewData["Title"] = "Roster Data";
 }
-<div class="row">
-
-    <div class="col-md-9">
-        @if (Model.Count() > 0)
-        {
-            <table class="table">
+<table id="coursesTable" class="table">
                 <thead>
                     <tr>
                         <th>
@@ -34,34 +29,32 @@
                     </tr>
                 </thead>
                 <tbody>
-                    @foreach (var item in Model)
-                    {
-                        <tr>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.CourseSourcedId)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Status)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.DateLastModified)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Title)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.SchoolYear)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.CourseCode)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.OrgSourcedId)
-                            </td>
-                        </tr>
-                    }
+                   
                 </tbody>
             </table>
-        }
-    </div>
-</div>
+@section scripts{
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/dt-1.11.3/fh-3.2.1/r-2.2.9/sc-2.0.5/sl-1.3.4/datatables.min.css"/>
+    <script type="text/javascript" src="https://cdn.datatables.net/v/bs4/dt-1.11.3/fh-3.2.1/r-2.2.9/sc-2.0.5/sl-1.3.4/datatables.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function(){
+            $('#coursesTable').dataTable({
+                "processing": true,
+                "paging": true,
+                "autoWidth": false,
+                "ajax": {
+                    "url": "/RosterData/GetCourses",
+                    "type": "get"
+                },
+                "columns":[
+                    {"data": "courseSourcedId", "name": "Course Sourced Id", "autoWidth": true},
+                    {"data": "status", "name": "Status", "autoWidth": true},
+                    {"data": "dateLastModified", "name": "Last Modified", "autoWidth": true},
+                    {"data": "title", "name": "Title", "autoWidth": true},
+                    {"data": "schoolYear", "name": "School Year", "autoWidth": true},
+                    {"data": "courseCode", "name": "Course Code", "autoWidth": true},
+                    {"data": "orgSourcedId", "name": "Org Sourced Id", "autoWidth": true},
+                ]
+            });
+        });
+    </script>
+}
