--- a/Views/RosterData/Enrollments.cshtml
+++ b/Views/RosterData/Enrollments.cshtml
@@ -1,13 +1,8 @@
-﻿@model IEnumerable<Enrollments>
+﻿@model Enrollments
 @{
     ViewData["Title"] = "Roster Data";
 }
-<div class="row">
-    
-    <div class="col-md-9">
-        @if (Model.Count() > 0)
-        {
-            <table class="table">
+<table id="enrollmentsTable"class="table">
                 <thead>
                     <tr>
                         <th>
@@ -43,43 +38,35 @@
                     </tr>
                 </thead>
                 <tbody>
-                    @foreach (var item in Model)
-                    {
-                        <tr>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.EnrollmentSourcedId)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Status)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.DateLastModified)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.UserSourcedId)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.ClassSourcedId)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.OrgSourcedId)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Role)
-                            </td>
-                             <td>
-                                @Html.DisplayFor(modelItem => item.Primary)
-                            </td>
-                             <td>
-                                @Html.DisplayFor(modelItem => item.BeginDate)
-                            </td>
-                             <td>
-                                @Html.DisplayFor(modelItem => item.EndDate)
-                            </td>
-                        </tr>
-                    }
+                   
                 </tbody>
             </table>
-        }
-    </div>
-</div>
+@section scripts{
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/dt-1.11.3/fh-3.2.1/r-2.2.9/sc-2.0.5/sl-1.3.4/datatables.min.css"/>
+    <script type="text/javascript" src="https://cdn.datatables.net/v/bs4/dt-1.11.3/fh-3.2.1/r-2.2.9/sc-2.0.5/sl-1.3.4/datatables.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function(){
+            $('#enrollmentsTable').dataTable({
+                "processing": true,
+                "paging": true,
+                "autoWidth": false,
+                "ajax": {
+                    "url": "/RosterData/GetEnrollments",
+                    "type": "get"
+                },
+                "columns":[
+                    {"data": "enrollmentSourcedId", "name": "Enrollment Sourced Id", "autoWidth": true},
+                    {"data": "status", "name": "Status", "autoWidth": true},
+                    {"data": "dateLastModified", "name": "Last Modified", "autoWidth": true},
+                    {"data": "userSourcedId", "name": "User Sourced Id", "autoWidth": true},
+                    {"data": "classSourcedId", "name": "Class Sourced Id", "autoWidth": true},
+                    {"data": "orgSourcedId", "name": "Org Sourced Id", "autoWidth": true},
+                    {"data": "role", "name": "Role", "autoWidth": true},
+                    {"data": "primary", "name": "Primary", "autoWidth": true},
+                    {"data": "beginDate", "name": "Begin Date", "autoWidth": true},
+                    {"data": "endDate", "name": "End Date", "autoWidth": true},
+                ]
+            });
+        });
+    </script>
+}
