--- a/wwwroot/css/login.css
+++ b/wwwroot/css/login.css
@@ -1,20 +1,57 @@
 ﻿body {
     font-family: "Helvetica Neue", "Open sans", sans-serif;
-    background-image: url("../Images/new_cut_background.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    
+    height: 100%;
+    background-color: #171717;
+}
+html{
+    height: 100%;
+}
+a {
+    color: #c13610;
+}
+input {
+    border-color: #c13610;
+    border-style: solid;
+}
+.card-footer {
+    border-top-color: #c13610;
+    border-top-style: solid;
+    vertical-align: middle;
+}
+.form-control {
+    border-color: #c13610;
+    border-style: solid;
+    border-width: 2px;
 }
 
-.eagletree {
-    height: 125px;
-    width: 125px;
+.login-btn {
+    color: white;
+    width: 100%;
+    background-color: #c13610;
+    display: block;
+    margin: auto;
 }
 
-.card{
-    background-color: rgba(255,255,255,0.1);
+.external-div {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
-
+.azure-img {
+    display: block;
+    margin: auto;
+}
+.ext-p{
+    margin: auto;
+}
+.card {
+    color: white;
+    background-color: #171717;
+    border-color: #c13610;
+}
+.card-img-top{
+    height: 450px;
+}
 .azurebutton{
     background-size: cover;
 }
