--- a/Views/RosterData/Users.cshtml
+++ b/Views/RosterData/Users.cshtml
@@ -12,7 +12,7 @@
                 <h2 id="modalHeading"></h2>
             </div>
             <div class="modal-body">
-
+                <img id="modalStudentPhoto" src="">
             </div>
             <div class="modal-footer">
 
@@ -89,6 +89,7 @@
             console.log(data);
             //alert( 'You clicked on '+data['familyName']+'\'s row' );
             $('#modalHeading').text(data['givenName'] + ' ' + data['familyName']);
+            $('#modalStudentPhoto').src="data:image/png;base64, " + + data['idBase64'];
             $('#viewUserDetailsModal').modal('show');
             } );
     });
